--- a/src/client/commAudio/commaudio.ui
+++ b/src/client/commAudio/commaudio.ui
@@ -64,24 +64,14 @@
     <widget class="QSlider" name="player_volume">
      <property name="geometry">
       <rect>
-       <x>230</x>
-       <y>98</y>
+       <x>320</x>
+       <y>100</y>
        <width>131</width>
-       <height>22</height>
+       <height>20</height>
       </rect>
      </property>
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
-    <widget class="QGraphicsView" name="player_audio_icon">
-     <property name="geometry">
-      <rect>
-       <x>200</x>
-       <y>98</y>
-       <width>21</width>
-       <height>20</height>
-      </rect>
      </property>
     </widget>
     <widget class="QLabel" name="player_audio_duration">
@@ -100,16 +90,6 @@
      </property>
      <property name="text">
       <string>2:40</string>
-     </property>
-    </widget>
-    <widget class="QGraphicsView" name="player_next_btn">
-     <property name="geometry">
-      <rect>
-       <x>170</x>
-       <y>98</y>
-       <width>21</width>
-       <height>20</height>
-      </rect>
      </property>
     </widget>
     <widget class="QSlider" name="player_seekbar">
@@ -135,26 +115,6 @@
       </rect>
      </property>
     </widget>
-    <widget class="QGraphicsView" name="player_previous_btn">
-     <property name="geometry">
-      <rect>
-       <x>110</x>
-       <y>98</y>
-       <width>21</width>
-       <height>20</height>
-      </rect>
-     </property>
-    </widget>
-    <widget class="QGraphicsView" name="player_play_pause_toggle_btn">
-     <property name="geometry">
-      <rect>
-       <x>140</x>
-       <y>98</y>
-       <width>21</width>
-       <height>20</height>
-      </rect>
-     </property>
-    </widget>
     <widget class="QLabel" name="player_audio_name">
      <property name="geometry">
       <rect>
@@ -171,6 +131,74 @@
      </property>
      <property name="text">
       <string>Song name</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="player_play_pause_toggle_btn">
+     <property name="geometry">
+      <rect>
+       <x>150</x>
+       <y>100</y>
+       <width>30</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset>
+       <normaloff>Resources/play.png</normaloff>Resources/play.png</iconset>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="player_next_btn">
+     <property name="geometry">
+      <rect>
+       <x>190</x>
+       <y>100</y>
+       <width>30</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset>
+       <normaloff>Resources/next.png</normaloff>Resources/next.png</iconset>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="player_previous_btn">
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>100</y>
+       <width>30</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset>
+       <normaloff>Resources/previous.png</normaloff>Resources/previous.png</iconset>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton">
+     <property name="geometry">
+      <rect>
+       <x>290</x>
+       <y>100</y>
+       <width>30</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset>
+       <normaloff>Resources/volume.png</normaloff>Resources/volume.png</iconset>
      </property>
     </widget>
    </widget>
@@ -261,6 +289,10 @@
     <property name="text">
      <string>Send Message</string>
     </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>Resources/chat.png</normaloff>Resources/chat.png</iconset>
+    </property>
    </widget>
    <widget class="QPushButton" name="push_to_talk_btn">
     <property name="geometry">
@@ -273,6 +305,10 @@
     </property>
     <property name="text">
      <string>Push To Talk</string>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>Resources/microphone.png</normaloff>Resources/microphone.png</iconset>
     </property>
    </widget>
    <widget class="QTableWidget" name="playlist_client">
@@ -420,16 +456,25 @@
    </property>
   </action>
   <action name="actionSave_Playlist">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Save Playlist</string>
    </property>
   </action>
   <action name="actionSave_Current_Song">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Save Current Song</string>
    </property>
   </action>
   <action name="actionOpen_Playlist">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Open Playlist</string>
    </property>
@@ -472,5 +517,75 @@
  <resources>
   <include location="commaudio.qrc"/>
  </resources>
- <connections/>
+ <connections>
+  <connection>
+   <sender>actionConnect_to_Server</sender>
+   <signal>triggered()</signal>
+   <receiver>commAudioClass</receiver>
+   <slot>newConnectDialog()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>385</x>
+     <y>294</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionUpload_a_Song</sender>
+   <signal>triggered()</signal>
+   <receiver>commAudioClass</receiver>
+   <slot>newAudioUploadDialog()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>385</x>
+     <y>294</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionExit</sender>
+   <signal>triggered()</signal>
+   <receiver>commAudioClass</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>385</x>
+     <y>294</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>player_play_pause_toggle_btn</sender>
+   <signal>clicked()</signal>
+   <receiver>commAudioClass</receiver>
+   <slot>playPauseButtonClick()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>174</x>
+     <y>532</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>385</x>
+     <y>294</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>newConnectDialog()</slot>
+  <slot>newAudioUploadDialog()</slot>
+  <slot>playPauseButtonClick()</slot>
+ </slots>
 </ui>
