--- a/src/client/commAudio/connect_dialog.ui
+++ b/src/client/commAudio/connect_dialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>360</width>
-    <height>181</height>
+    <height>291</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -34,7 +34,7 @@
   <widget class="QLineEdit" name="ip_address">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>140</x>
      <y>20</y>
      <width>201</width>
      <height>31</height>
@@ -49,10 +49,10 @@
     <string/>
    </property>
   </widget>
-  <widget class="QLineEdit" name="port_number">
+  <widget class="QLineEdit" name="tcp_port_number">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>140</x>
      <y>70</y>
      <width>101</width>
      <height>31</height>
@@ -72,7 +72,7 @@
     <rect>
      <x>30</x>
      <y>70</y>
-     <width>81</width>
+     <width>101</width>
      <height>31</height>
     </rect>
    </property>
@@ -82,14 +82,14 @@
     </font>
    </property>
    <property name="text">
-    <string>Port No:</string>
+    <string>TCP Port No.:</string>
    </property>
   </widget>
   <widget class="QPushButton" name="connectDlg_connect_btn">
    <property name="geometry">
     <rect>
      <x>70</x>
-     <y>130</y>
+     <y>240</y>
      <width>81</width>
      <height>31</height>
     </rect>
@@ -102,7 +102,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>130</y>
+     <y>240</y>
      <width>81</width>
      <height>31</height>
     </rect>
@@ -111,7 +111,128 @@
     <string>Cancel</string>
    </property>
   </widget>
+  <widget class="QLineEdit" name="username">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>190</y>
+     <width>201</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>190</y>
+     <width>81</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Username:</string>
+   </property>
+  </widget>
+  <widget class="Line" name="line">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>160</y>
+     <width>311</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="udp_port_no">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>120</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>120</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>UDP Port No.:</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>connectDlg_connect_btn</sender>
+   <signal>clicked()</signal>
+   <receiver>connect_dialog</receiver>
+   <slot>getDataAndClose()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>110</x>
+     <y>255</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>179</x>
+     <y>145</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>connectDlg_cancel_btn</sender>
+   <signal>clicked()</signal>
+   <receiver>connect_dialog</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>240</x>
+     <y>255</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>179</x>
+     <y>145</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>getDataAndClose()</slot>
+ </slots>
 </ui>
